mobile webshop fix some issues with elements overflow and enhancements

--- a/src/sources/forus-webshop/scss/_common/sections/blocks/block-funds-list.scss
+++ b/src/sources/forus-webshop/scss/_common/sections/blocks/block-funds-list.scss
@@ -166,4 +166,20 @@
             }
         }
     }
+
+    @media screen and (max-width: 360px) {
+        .fund-item {
+            .fund-content {
+                .fund-details {
+                    .fund-name {
+                        font: 700 12px/20px var(--base-font);
+                    }
+
+                    .fund-description {
+                        font: 400 12px/20px var(--base-font);
+                    }
+                }
+            }
+        }
+    }
 }
