--- a/src/sources/forus-webshop/scss/_common/sections/blocks/block-organizations.scss
+++ b/src/sources/forus-webshop/scss/_common/sections/blocks/block-organizations.scss
@@ -239,4 +239,32 @@
             }
         }
     }
+
+    @media screen and (max-width: 360px) {
+        .organization-item {
+            .organization-pane {
+                .organization-pane-info {
+                    padding: 15px 10px;
+
+                    .organization-logo {
+                        .organization-logo-img {
+                            width: 40px;
+                        }
+                    }
+
+                    .organization-title {
+                        font: 600 12px/18px var(--hf);
+
+                        .organization-page-link {
+                            font: 600 10px/12px var(--base-font);
+                        }
+                    }
+                }
+
+                .organization-pane-collapse {
+                    padding: 10px 5px;
+                }
+            }
+        }
+    }
 }
