--- a/src/sources/forus-webshop/scss/_common/sections/blocks/block-showcase.scss
+++ b/src/sources/forus-webshop/scss/_common/sections/blocks/block-showcase.scss
@@ -585,4 +585,27 @@
             }
         }
     }
+
+    @media screen and (max-width: 360px) {
+        .showcase-layout {
+            .showcase-content {
+                .showcase-content-header {
+                    .showcase-filters-block {
+                        .block-label-tabs {
+                            flex-direction: column;
+
+                            .showcase-filters-item {
+                                margin-bottom: 10px;
+                                margin-right: 0;
+
+                                .select-control {
+                                    flex-grow: 1;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
